This file documents the revision history for Perl extension Catalyst.

        - Swapped out CGI::Cookie in favour of CGI::Simple::Cookie
        - Removed test dependencies on Test::NoWarnings, Test::MockObject
        - Removed dependency on UNIVERSAL::require
        - Split out Catalyst::Helper into a new distribution
        - un-bundled the plugins as they are now pre-reqs for Catalyst::Helper
        - nuked each() out of core with prejudice (due to lurking buglets)
        - Added tests from phaylon for dispatcher precedence
        - Use Class::Inspector->loaded($class) instead of $class->can('can')
        - Added ActionClass attribute
        - Removed Test::WWW::Mechanize::Catalyst from Makefile.PL (circular dep)
        - Updated docs for Catalyst::Component
        - Separated execute and dispatch on Catalyst::Action
        - cleaned up logging and debug output
        - minor doc fixes
        - Added warning for setup being called twice
        - Fix pod to use DBIC::Schema instead of DBIC model
        - Fix ->config failing to copy _config for subclassing
        - Updated log format
        - Updated debug dump

5.6902  2006-05-04 13:00:00
        - Remove tarballs and OSX metadata files.

5.6901  2006-05-03 11.17:00
        - Module::Install didn't overwrite META.yml. 

5.6900  2006-05-03 11.17:00
        - Stupid pause indexer can't count.
        - Better fix for Catalyst::Test
        - more tests.

5.682   2006-04-27 13:51:00
        - Damn OSX attributes again :( 

5.681   2006-04-27 08:47:00
        - Updated manifest.
        - Add basename to core . (Deprecates Catalyst::Plugin::Basename)
    
5.68    2006-04-26 12:23:00
        - ConfigLoader: Updated to version 0.06
        - fixed undef warnings in uri_for() and uri_with()
	- Fixed Catalyst::Test to report errors on failed Class load

5.678   2006-04-24 12:30:00
        - Re-release of 5.67 without OSX metadata files.

5.67    2006-04-23 08:50:00